RESOLVED FIXED248174
Making AlternativeTextType an enum class with EnumTraits and serialize it instead of casting to/from an int32_t.
https://bugs.webkit.org/show_bug.cgi?id=248174
Summary Making AlternativeTextType an enum class with EnumTraits and serialize it ins...
Angela
Reported 2022-11-21 07:59:59 PST
Making AlternativeTextType an enum class with EnumTraits and serialize it instead of casting to/from an int32_t. Prevents from assertion failure in void _NSWindowSetFrameIvar
Attachments
Angela
Comment 1 2022-11-21 10:32:35 PST
Angela
Comment 2 2022-11-21 10:33:25 PST
EWS
Comment 3 2022-12-04 12:39:49 PST
Committed 257360@main (d84ac58bd76d): <https://commits.webkit.org/257360@main> Reviewed commits have been landed. Closing PR #6705 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.