AlternativeTextType as enum class with EnumTraits and serialization https://bugs.webkit.org/show_bug.cgi?id=248174 rdar://102309622

Making AlternativeTextType an enum class with EnumTraits and serialize it instead of casting to/from an int32_t. Prevents from assertion failure in void _NSWindowSetFrameIvar

Reviewed by Youenn Fablet

Canonical link: https://commits.webkit.org/257360@main